introducing traaaabot music, kinda

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "traaaabot",
-  "productName": "TraaaaBot",
+  "name": "traaaabot-console",
+  "productName": "TraaaaBot Console",
   "copyright": "2023 © GXX: by electrasys",
   "version": "1.0.0",
   "description": "A multipurpose Discord bot written in discord.js that focuses on moderation, server management, and fun commmands for the public.",
@@ -16,30 +16,36 @@
   "author": "electrasys",
   "license": "ISC",
   "dependencies": {
-    "@statuspage/status-widget": "^1.0.4",
+    "@discordjs/voice": "^0.16.0",
     "axios": "^1.5.0",
     "canvacord": "^5.4.10",
-    "chart.js": "^4.4.0",
     "clear-console": "^1.1.0",
     "cors": "^2.8.5",
+    "discord-ytdl-core": "^5.0.4",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "easy-number-formatter": "^1.0.3",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
     "ip": "^2.0.0",
     "mongoose": "^7.4.3",
     "node-fetch": "^3.3.2",
     "node-pty": "^1.0.0",
     "node-vibrant": "^3.2.1-alpha.1",
+    "opusscript": "^0.0.8",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "rich-presence-builder": "^0.1.1",
     "sharp": "^0.32.5",
+    "sodium": "^3.0.2",
     "sqlite3": "^5.1.6",
     "url": "^0.11.1",
-    "xterm": "^5.2.1",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm": "^5.3.0",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
