--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "concurrently \"npm run start-server\" \"npm run start-electron\"",
     "start-server": "node server.js",
+    "start-bot": "node src/index.js",
     "start-electron": "electron .",
     "rebuild": "electron-rebuild",
     "build": "electron-builder"
@@ -32,6 +33,7 @@
     "fs": "^0.0.1-security",
     "ip": "^2.0.0",
     "mongoose": "^7.4.3",
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.3.2",
     "node-pty": "^1.0.0",
     "node-vibrant": "^3.2.1-alpha.1",
