--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "sqlite3": "^5.1.6",
     "url": "^0.11.1",
     "xterm": "^5.3.0",
-    "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
@@ -56,8 +55,6 @@
     "electron-builder": "^24.6.4",
     "electron-rebuild": "^3.2.9",
     "electron-rebuilder": "^1.0.0",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "style-loader": "^3.3.3"
   }
 }
