--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs": "^0.0.1-security",
     "ip": "^2.0.0",
     "mongoose": "^7.4.3",
+    "ms": "^2.1.3",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.2",
     "node-pty": "^1.0.0",
@@ -40,6 +41,7 @@
     "opusscript": "^0.0.8",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "pretty-ms": "^8.0.0",
     "rich-presence-builder": "^0.1.1",
     "sharp": "^0.32.5",
     "sodium": "^3.0.2",
