--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
+    "fuzzy": "^0.1.3",
     "ip": "^2.0.0",
     "mongoose": "^7.4.3",
     "ms": "^2.1.3",
@@ -46,6 +47,7 @@
     "sharp": "^0.32.5",
     "sodium": "^3.0.2",
     "sqlite3": "^5.1.6",
+    "string-similarity": "^4.0.4",
     "url": "^0.11.1",
     "xterm": "^5.3.0",
     "ytdl-core": "^4.11.5"
