--- a/package.json
+++ b/package.json
@@ -31,15 +31,11 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
-    "fuzzy": "^0.1.3",
     "ip": "^2.0.0",
     "mongoose": "^7.4.3",
     "ms": "^2.1.3",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.2",
-    "node-pty": "^1.0.0",
-    "node-vibrant": "^3.2.1-alpha.1",
-    "opusscript": "^0.0.8",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pretty-ms": "^8.0.0",
@@ -49,8 +45,7 @@
     "sqlite3": "^5.1.6",
     "string-similarity": "^4.0.4",
     "url": "^0.11.1",
-    "xterm": "^5.3.0",
-    "ytdl-core": "^4.11.5"
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
